# agent-system-v3

./: .env.example  .gitignore  .python-version  DEPLOY.md  Makefile  README.md  docker-compose.db.yml  docker-compose.dev.yml  docker-compose.hostapi.yml  docker-compose.yml
.playwright-mcp/: page-2026-06-28T15-32-43-388Z.yml  page-2026-06-28T15-38-26-722Z.yml  page-2026-06-28T15-41-09-537Z.yml  page-2026-06-28T15-41-41-420Z.yml  page-2026-06-28T15-42-08-289Z.yml  page-2026-06-28T15-42-38-649Z.yml  page-2026-06-28T15-42-44-006Z.yml  page-2026-06-28T15-46-46-816Z.yml  (+103 more)
api/: .dockerignore  .env.example  .python-version  Dockerfile  docker-entrypoint.sh  pyproject.toml  seed_demo.py
api/app/: __init__.py  db.py  main.py  models.py  schemas.py  schemas_plan.py
api/app/git/: repo.py
api/app/graph/: diff_ingest.py  revision.py  store.py
api/app/routers/: channel.py  governance.py  graph.py  lifecycle.py  memory.py  projects.py  steer.py
api/app/services/: assistant.py  channel.py  embeddings.py  executor.py  governance.py  intent.py  lifecycle_graph.py  llm.py  memory.py  message_gen.py  planner.py  promotion.py  prompt_build.py
api/control_tower_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
api/tests/: conftest.py  test_api.py  test_backlog.py  test_channel.py  test_defect_fixes.py  test_diff_capture.py  test_diff_ingest.py  test_embeddings.py  test_executor.py  test_governance.py  test_graph_etag.py  test_health.py  test_lifecycle_api.py  test_lifecycle_async.py  test_lifecycle_graph.py  test_lifecycle_rag.py  test_memory.py  test_memory_api.py  test_models.py  test_models_supported.py  test_planner.py  test_project_admin.py  test_projects_api.py  test_promotion.py  test_promotion_trigger.py  test_prompt_build.py  test_prompt_rag.py  test_repo.py  test_schemas_plan.py  test_steer.py  test_store.py  test_throttle.py  test_write.py
(+117 files in other folders)
