[project]
name = "control-tower-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115", "uvicorn[standard]>=0.30", "sqlalchemy>=2.0.30",
  "pydantic>=2.8", "unidiff>=0.7.5",
  "langgraph>=0.2", "langgraph-checkpoint-postgres>=2.0", "langchain-anthropic>=0.2",
]
[project.optional-dependencies]
dev = ["pytest>=8.3", "httpx>=0.27"]
postgres = ["psycopg[binary]>=3.2", "pgvector>=0.3"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
