[project]
name = "control-tower-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115", "uvicorn[standard]>=0.30", "sqlalchemy>=2.0.30",
  "pydantic>=2.8", "unidiff>=0.7.5", "python-dotenv>=1.0",
  "langgraph>=0.2", "langgraph-checkpoint-postgres>=2.0", "langchain-anthropic>=0.2",
  "langchain-core>=0.3", "langchain-text-splitters>=0.3", "langchain-openai>=0.2", "numpy>=1.26",
]
[project.optional-dependencies]
dev = ["pytest>=8.3", "httpx>=0.27"]
postgres = ["psycopg[binary]>=3.2", "pgvector>=0.3"]
# real-mode RAG (lazy-imported; not needed for tests). sentence-transformers (which pulls torch)
# is REQUIRED by langchain-huggingface's HuggingFaceEmbeddings but not a hard dep of it, so name
# it explicitly — else `.[rag]` installs but `ASV3_EMBEDDINGS=huggingface` 500s at runtime.
rag = ["langchain-postgres>=0.0.12", "langchain-huggingface>=0.1", "sentence-transformers>=3.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
